# dali-core

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README  README.md  dali.manifest-smack  env_set_4  groups  project.config
automated-tests/: .gitignore  .gitignore-with-autogenerated-files  .gitignore-without-autogenerated-files  CMakeLists.txt  CMakeLists.txt.in  README.md  _export_desktop.sh  _export_sbs.sh  build.sh  coverage.sh  execute.sh  execute_target.sh  patch-coverage.pl  tbp.pl  tcbuild  tet_scen  tetbuild.cfg  tetclean.cfg
automated-tests/TET/: _export_env.sh  _export_target_env.sh  build_out.sh  coverage.mk  coverage.sh  debug.sh  debug_target.sh  execute.sh  file.list  rules.mk.in  tet_scen  tetexec.cfg
automated-tests/TET/dali-internal-test-suite/: master-makefile.mk  utc-MODULE-CLASS.cpp.in
automated-tests/TET/dali-test-suite/: master-makefile.mk  tc-gen.sh  utc-MODULE-CLASS.cpp.in
automated-tests/TET/dali-test-suite-utils/: dali-test-suite-internal-utils.h  dali-test-suite-utils.h  test-application.cpp  test-application.h  test-gesture-manager.h  test-gl-sync-abstraction.h  test-native-image.h  test-platform-abstraction.h  test-render-controller.h
automated-tests/dali-internal-test-suite/: tc-gen.sh
automated-tests/dali-internal-test-suite/image-factory/: file.list  utc-Dali-ImageFactory.cpp
automated-tests/dali-internal-test-suite/material/: utc-Dali-Material.cpp
automated-tests/dali-internal-test-suite/resource-manager/: .gitignore  file.list  tslist  utc-DaliInternal-ResourceClient.cpp
automated-tests/dali-internal-test-suite/text/: .gitignore  tslist  utc-DaliInternal-Font.cpp
automated-tests/dali-test-suite/: master-makefile.mk
automated-tests/dali-test-suite-utils/: mesh-builder.h  test-application.h  test-gl-abstraction.h  test-platform-abstraction.h  test-render-controller.h  test-trace-call-stack.h
automated-tests/dali-test-suite/actors/: .gitignore  file.list  tslist  tslist-text-actor  utc-Dali-Actor.cpp  utc-Dali-BaseHandle.cpp  utc-Dali-CameraActor.cpp  utc-Dali-CustomActor.cpp  utc-Dali-Handle.cpp  utc-Dali-ImageActor.cpp  utc-Dali-Layer.cpp  utc-Dali-LightActor.cpp  utc-Dali-MeshActor.cpp  utc-Dali-Stage.cpp  utc-Dali-TextActor.cpp
automated-tests/dali-test-suite/animation/: .gitignore  file.list  utc-Dali-ActiveConstraint.cpp  utc-Dali-Constraint.cpp
automated-tests/dali-test-suite/common/: .gitignore  file.list  tslist  utc-Dali-Any.cpp  utc-Dali-LocklessBuffer.cpp
automated-tests/dali-test-suite/context/: .gitignore  tslist
automated-tests/dali-test-suite/dynamics/: tslist  utc-Dali-DynamicsBodyConfig.cpp
automated-tests/dali-test-suite/effects/: utc-Dali-ShaderEffect.cpp
automated-tests/dali-test-suite/events/: utc-Dali-EventProcessing.cpp  utc-Dali-GestureDetector.cpp  utc-Dali-HitTestAlgorithm.cpp  utc-Dali-KeyEvent.cpp  utc-Dali-LongPressGesture.cpp  utc-Dali-LongPressGestureDetector.cpp  utc-Dali-MouseWheelEvent.cpp  utc-Dali-PanGestureDetector.cpp  utc-Dali-PinchGestureDetector.cpp  utc-Dali-TapGesture.cpp  utc-Dali-TapGestureDetector.cpp  utc-Dali-TouchEventCombiner.cpp  utc-Dali-TouchProcessing.cpp
automated-tests/dali-test-suite/geometry/: file.list  tslist  utc-Dali-AnimatableMesh.cpp  utc-Dali-Spline.cpp
automated-tests/dali-test-suite/images/: .gitignore  file.list  tslist  utc-Dali-FrameBufferImage.cpp  utc-Dali-Image.cpp  utc-MODULE-CLASS.cpp.in
automated-tests/dali-test-suite/math/: .gitignore  utc-Dali-AngleAxis.cpp  utc-Dali-MathUtils.cpp  utc-Dali-Matrix.cpp  utc-Dali-Matrix3.cpp  utc-Dali-Radian.cpp  utc-Dali-Vector4.cpp
automated-tests/dali-test-suite/object-registry/: .gitignore  tslist
automated-tests/dali-test-suite/property-notification/: .gitignore  file.list  utc-Dali-PropertyNotification.cpp
automated-tests/dali-test-suite/render-tasks/: tslist  utc-Dali-RenderTask.cpp
automated-tests/dali-test-suite/scripting/: .gitignore  tslist
automated-tests/dali-test-suite/signals/: .gitignore  utc-Dali-SignalTemplatesV2.cpp
automated-tests/dali-test-suite/text/: .gitignore  tslist  utc-Dali-Font.cpp  utc-Dali-FontParameters.cpp  utc-Dali-Text.cpp  utc-Dali-TextStyle.cpp  utc-Dali-Utf8.cpp
automated-tests/dali-test-suite/type-registry/: utc-Dali-TypeRegistry.cpp
automated-tests/packaging/: core-dali-tests.spec  core-dali-unmanaged-tests.spec
automated-tests/scripts/: add_all_smack_rule.sh  add_smack_rule.sh  add_style.pl  all_smack.rule  autocompletion.sh  init.sh  output_summary.pl  retriever.sh  summarize.pl  tcbuild.sh  tcheadgen.sh  tcpackageslistsgen.sh  tctestsgen.sh
automated-tests/src/: CMakeLists.txt
automated-tests/src/common/: assert.h  signal-helper.h  testcase.h
automated-tests/src/dali-devel/: CMakeLists.txt  tct-dali-devel-core.cpp  utc-Dali-Actor.cpp  utc-Dali-Atlas.cpp  utc-Dali-ConditionalWait.cpp  utc-Dali-Constrainer.cpp  utc-Dali-Context.cpp  utc-Dali-CullFace.cpp  utc-Dali-DynamicsBody.cpp  utc-Dali-DynamicsBodyConfig.cpp  utc-Dali-DynamicsJoint.cpp  utc-Dali-DynamicsShape.cpp  utc-Dali-DynamicsWorld.cpp  utc-Dali-DynamicsWorldConfig.cpp  utc-Dali-FrameBuffer.cpp  utc-Dali-Geometry.cpp  utc-Dali-HitTestAlgorithm.cpp  utc-Dali-Material.cpp  utc-Dali-MeshData.cpp  utc-Dali-Mutex.cpp  utc-Dali-PixelData.cpp  utc-Dali-PropertyBuffer.cpp  utc-Dali-Renderer.cpp  utc-Dali-Sampler.cpp  utc-Dali-Scripting.cpp  utc-Dali-Shader.cpp  utc-Dali-SignalDelegate.cpp  utc-Dali-Texture.cpp  utc-Dali-TextureSet.cpp
automated-tests/src/dali-graphics/: CMakeLists.txt  tct-dali-graphics-core.cpp  utc-Dali-Graphics-API-texture.cpp  utc-Dali-Graphics-API.cpp  utc-Dali-Graphics-Manager.cpp  utc-Dali-Graphics-Object-Owner.cpp  utc-Dali-Graphics-Utility-Queue.cpp  utc-Dali-Graphics-object-owner.cpp
automated-tests/src/dali-internal/: CMakeLists.txt  mesh-builder.h  tct-Dali-internal-RayTest.cpp  tct-dali-internal-core.cpp  tct-dali-internal-core.h  utc-Dali-AnimatableMesh.cpp  utc-Dali-DistanceField.cpp  utc-Dali-DynamicsBody.cpp  utc-Dali-DynamicsShape.cpp  utc-Dali-DynamicsWorld.cpp  (+53 more)
automated-tests/style/: summary.xsl  testresult.xsl
(+2657 files in other folders)
