cmake_minimum_required(VERSION 3.6)
project(dali-core)

set(CMAKE_CXX_STANDARD 14)

set(SOURCE_FILES
        build/tizen/dali-core/graphics/Makefile.am
        build/tizen/dali-core/linker-test.cpp
        build/tizen/dali-core/Makefile.am
        build/tizen/compile
        build/tizen/configure.ac
        build/tizen/dali-core.pc.in
        build/tizen/Makefile.am
        dali/devel-api/actors/actor-devel.cpp
        dali/devel-api/actors/actor-devel.h
        dali/devel-api/actors/layer-devel.h
        dali/devel-api/animation/animation-data.cpp
        dali/devel-api/animation/animation-data.h
        dali/devel-api/animation/path-constrainer.cpp
        dali/devel-api/animation/path-constrainer.h
        dali/devel-api/common/hash.cpp
        dali/devel-api/common/hash.h
        dali/devel-api/common/map-wrapper.h
        dali/devel-api/common/owner-container.h
        dali/devel-api/common/ref-counted-dali-vector.h
        dali/devel-api/common/set-wrapper.h
        dali/devel-api/events/hit-test-algorithm.cpp
        dali/devel-api/events/hit-test-algorithm.h
        dali/devel-api/images/distance-field.cpp
        dali/devel-api/images/distance-field.h
        dali/devel-api/images/native-image-interface-extension.h
        dali/devel-api/images/nine-patch-image.cpp
        dali/devel-api/images/nine-patch-image.h
        dali/devel-api/images/texture-set-image.cpp
        dali/devel-api/images/texture-set-image.h
        dali/devel-api/object/csharp-type-info.h
        dali/devel-api/object/csharp-type-registry.cpp
        dali/devel-api/object/csharp-type-registry.h
        dali/devel-api/object/handle-devel.cpp
        dali/devel-api/object/handle-devel.h
        dali/devel-api/object/property-helper-devel.h
        dali/devel-api/object/weak-handle.cpp
        dali/devel-api/object/weak-handle.h
        dali/devel-api/rendering/renderer-devel.h
        dali/devel-api/scripting/enum-helper.h
        dali/devel-api/scripting/scripting.cpp
        dali/devel-api/scripting/scripting.h
        dali/devel-api/signals/signal-delegate.cpp
        dali/devel-api/signals/signal-delegate.h
        dali/devel-api/threading/conditional-wait.cpp
        dali/devel-api/threading/conditional-wait.h
        dali/devel-api/threading/mutex.cpp
        dali/devel-api/threading/mutex.h
        dali/devel-api/threading/thread.cpp
        dali/devel-api/threading/thread.h
        dali/graphics-api/graphics-api-handle.h
        dali/graphics-api/graphics-api-manager.h
        dali/graphics-api/graphics-api-texture.h
        dali/graphics-api/graphics-api-utility.h
        dali/integration-api/events/event.cpp
        dali/integration-api/events/event.h
        dali/integration-api/events/gesture-event.cpp
        dali/integration-api/events/gesture-event.h
        dali/integration-api/events/gesture-requests.h
        dali/integration-api/events/hover-event-integ.cpp
        dali/integration-api/events/hover-event-integ.h
        dali/integration-api/events/key-event-integ.cpp
        dali/integration-api/events/key-event-integ.h
        dali/integration-api/events/long-press-gesture-event.cpp
        dali/integration-api/events/long-press-gesture-event.h
        dali/integration-api/events/multi-point-event-integ.cpp
        dali/integration-api/events/multi-point-event-integ.h
        dali/integration-api/events/pan-gesture-event.cpp
        dali/integration-api/events/pan-gesture-event.h
        dali/integration-api/events/pinch-gesture-event.cpp
        dali/integration-api/events/pinch-gesture-event.h
        dali/integration-api/events/point.cpp
        dali/integration-api/events/point.h
        dali/integration-api/events/tap-gesture-event.cpp
        dali/integration-api/events/tap-gesture-event.h
        dali/integration-api/events/touch-event-combiner.cpp
        dali/integration-api/events/touch-event-combiner.h
        dali/integration-api/events/touch-event-integ.cpp
        dali/integration-api/events/touch-event-integ.h
        dali/integration-api/events/wheel-event-integ.cpp
        dali/integration-api/events/wheel-event-integ.h
        dali/integration-api/bitmap.cpp
        dali/integration-api/bitmap.h
        dali/integration-api/context-notifier.h
        dali/integration-api/core.cpp
        dali/integration-api/core.h
        dali/integration-api/debug.cpp
        dali/integration-api/debug.h
        dali/integration-api/gesture-manager.h
        dali/integration-api/gl-abstraction.h
        dali/integration-api/gl-defines.h
        dali/integration-api/gl-sync-abstraction.h
        dali/integration-api/input-options.cpp
        dali/integration-api/input-options.h
        dali/integration-api/lockless-buffer.cpp
        dali/integration-api/lockless-buffer.h
        dali/integration-api/platform-abstraction.h
        dali/integration-api/profiling.cpp
        dali/integration-api/profiling.h
        dali/integration-api/render-controller.h
        dali/integration-api/resource-declarations.h
        dali/integration-api/resource-policies.h
        dali/integration-api/resource-types.h
        dali/integration-api/system-overlay.cpp
        dali/integration-api/system-overlay.h
        dali/internal/common/blending-options.cpp
        dali/internal/common/blending-options.h
        dali/internal/common/buffer-index.h
        dali/internal/common/core-impl.cpp
        dali/internal/common/core-impl.h
        dali/internal/common/fixed-size-memory-pool.cpp
        dali/internal/common/fixed-size-memory-pool.h
        dali/internal/common/image-attributes.cpp
        dali/internal/common/image-attributes.h
        dali/internal/common/image-sampler.cpp
        dali/internal/common/image-sampler.h
        dali/internal/common/internal-constants.cpp
        dali/internal/common/internal-constants.h
        dali/internal/common/math.cpp
        dali/internal/common/math.h
        dali/internal/common/memory-pool-object-allocator.h
        dali/internal/common/message-buffer.cpp
        dali/internal/common/message-buffer.h
        dali/internal/common/message.h
        dali/internal/common/mutex-impl.cpp
        dali/internal/common/mutex-impl.h
        dali/internal/common/owner-pointer.h
        dali/internal/common/shader-data.h
        dali/internal/common/shader-saver.h
        dali/internal/common/text-vertex-2d.h
        dali/internal/common/type-abstraction-enums.h
        dali/internal/common/type-abstraction.h
        dali/internal/event/actors/actor-declarations.h
        dali/internal/event/actors/actor-impl.cpp
        dali/internal/event/actors/actor-impl.h
        dali/internal/event/actors/camera-actor-impl.cpp
        dali/internal/event/actors/camera-actor-impl.h
        dali/internal/event/actors/custom-actor-internal.cpp
        dali/internal/event/actors/custom-actor-internal.h
        dali/internal/event/actors/layer-impl.cpp
        dali/internal/event/actors/layer-impl.h
        dali/internal/event/actors/layer-list.cpp
        dali/internal/event/actors/layer-list.h
        dali/internal/event/animation/animation-impl.cpp
        dali/internal/event/animation/animation-impl.h
        dali/internal/event/animation/animation-playlist-declarations.h
        dali/internal/event/animation/animation-playlist.cpp
        dali/internal/event/animation/animation-playlist.h
        dali/internal/event/animation/animator-connector-base.h
        dali/internal/event/animation/animator-connector.h
        dali/internal/event/animation/constrainer.cpp
        dali/internal/event/animation/constrainer.h
        dali/internal/event/animation/constraint-base.cpp
        dali/internal/event/animation/constraint-base.h
        dali/internal/event/animation/constraint-impl.h
        dali/internal/event/animation/constraint-source-impl.h
        dali/internal/event/animation/key-frame-channel.h
        dali/internal/event/animation/key-frames-impl.cpp
        dali/internal/event/animation/key-frames-impl.h
        dali/internal/event/animation/linear-constrainer-impl.cpp
        dali/internal/event/animation/linear-constrainer-impl.h
        dali/internal/event/animation/path-constrainer-impl.cpp
        dali/internal/event/animation/path-constrainer-impl.h
        dali/internal/event/animation/path-impl.cpp
        dali/internal/event/animation/path-impl.h
        dali/internal/event/animation/progress-value.h
        dali/internal/event/animation/property-constraint-ptr.h
        dali/internal/event/animation/property-constraint.h
        dali/internal/event/animation/property-input-accessor.h
        dali/internal/event/animation/property-input-indexer.h
        dali/internal/event/common/complete-notification-interface.h
        dali/internal/event/common/connectable.h
        dali/internal/event/common/demangler.cpp
        dali/internal/event/common/demangler.h
        dali/internal/event/common/event-thread-services.cpp
        dali/internal/event/common/event-thread-services.h
        dali/internal/event/common/notification-manager.cpp
        dali/internal/event/common/notification-manager.h
        dali/internal/event/common/object-connector.h
        dali/internal/event/common/object-impl-helper.h
        dali/internal/event/common/object-impl.cpp
        dali/internal/event/common/object-impl.h
        dali/internal/event/common/object-registry-impl.cpp
        dali/internal/event/common/object-registry-impl.h
        dali/internal/event/common/projection.cpp
        dali/internal/event/common/projection.h
        dali/internal/event/common/property-buffer-impl.cpp
        dali/internal/event/common/property-buffer-impl.h
        dali/internal/event/common/property-conditions-impl.cpp
        dali/internal/event/common/property-conditions-impl.h
        dali/internal/event/common/property-helper.cpp
        dali/internal/event/common/property-helper.h
        dali/internal/event/common/property-input-impl.h
        dali/internal/event/common/property-metadata.h
        dali/internal/event/common/property-notification-impl.cpp
        dali/internal/event/common/property-notification-impl.h
        dali/internal/event/common/property-notification-manager.cpp
        dali/internal/event/common/property-notification-manager.h
        dali/internal/event/common/property-notifier.h
        dali/internal/event/common/stage-def.h
        dali/internal/event/common/stage-impl.cpp
        dali/internal/event/common/stage-impl.h
        dali/internal/event/common/system-overlay-impl.cpp
        dali/internal/event/common/system-overlay-impl.h
        dali/internal/event/common/thread-local-storage.cpp
        dali/internal/event/common/thread-local-storage.h
        dali/internal/event/common/type-info-impl.cpp
        dali/internal/event/common/type-info-impl.h
        dali/internal/event/common/type-registry-impl.cpp
        dali/internal/event/common/type-registry-impl.h
        dali/internal/event/effects/shader-factory.cpp
        dali/internal/event/effects/shader-factory.h
        dali/internal/event/events/actor-gesture-data.cpp
        dali/internal/event/events/actor-gesture-data.h
        dali/internal/event/events/actor-observer.cpp
        dali/internal/event/events/actor-observer.h
        dali/internal/event/events/event-processor.cpp
        dali/internal/event/events/event-processor.h
        dali/internal/event/events/gesture-detector-impl.cpp
        dali/internal/event/events/gesture-detector-impl.h
        dali/internal/event/events/gesture-event-processor.cpp
        dali/internal/event/events/gesture-event-processor.h
        dali/internal/event/events/gesture-processor.cpp
        dali/internal/event/events/gesture-processor.h
        dali/internal/event/events/hit-test-algorithm-impl.cpp
        dali/internal/event/events/hit-test-algorithm-impl.h
        dali/internal/event/events/hover-event-processor.cpp
        dali/internal/event/events/hover-event-processor.h
        dali/internal/event/events/key-event-processor.cpp
        dali/internal/event/events/key-event-processor.h
        dali/internal/event/events/long-press-gesture-detector-impl.cpp
        dali/internal/event/events/long-press-gesture-detector-impl.h
        dali/internal/event/events/long-press-gesture-processor.cpp
        dali/internal/event/events/long-press-gesture-processor.h
        dali/internal/event/events/multi-point-event-util.cpp
        dali/internal/event/events/multi-point-event-util.h
        dali/internal/event/events/pan-gesture-detector-impl.cpp
        dali/internal/event/events/pan-gesture-detector-impl.h
        dali/internal/event/events/pan-gesture-processor.cpp
        dali/internal/event/events/pan-gesture-processor.h
        dali/internal/event/events/pinch-gesture-detector-impl.cpp
        dali/internal/event/events/pinch-gesture-detector-impl.h
        dali/internal/event/events/pinch-gesture-processor.cpp
        dali/internal/event/events/pinch-gesture-processor.h
        dali/internal/event/events/tap-gesture-detector-impl.cpp
        dali/internal/event/events/tap-gesture-detector-impl.h
        dali/internal/event/events/tap-gesture-processor.cpp
        dali/internal/event/events/tap-gesture-processor.h
        dali/internal/event/events/touch-data-impl.cpp
        dali/internal/event/events/touch-data-impl.h
        dali/internal/event/events/touch-event-processor.cpp
        dali/internal/event/events/touch-event-processor.h
        dali/internal/event/events/wheel-event-processor.cpp
        dali/internal/event/events/wheel-event-processor.h
        dali/internal/event/images/bitmap-compressed.cpp
        dali/internal/event/images/bitmap-compressed.h
        dali/internal/event/images/bitmap-packed-pixel.cpp
        dali/internal/event/images/bitmap-packed-pixel.h
        dali/internal/event/images/buffer-image-impl.cpp
        dali/internal/event/images/buffer-image-impl.h
        dali/internal/event/images/context-recovery-interface.h
        dali/internal/event/images/encoded-buffer-image-impl.cpp
        dali/internal/event/images/encoded-buffer-image-impl.h
        dali/internal/event/images/frame-buffer-image-impl.cpp
        dali/internal/event/images/frame-buffer-image-impl.h
        dali/internal/event/images/image-impl.cpp
        dali/internal/event/images/image-impl.h
        dali/internal/event/images/native-image-impl.cpp
        dali/internal/event/images/native-image-impl.h
        dali/internal/event/images/nine-patch-image-impl.cpp
        dali/internal/event/images/nine-patch-image-impl.h
        dali/internal/event/images/pixel-data-impl.cpp
        dali/internal/event/images/pixel-data-impl.h
        dali/internal/event/images/resource-image-impl.cpp
        dali/internal/event/images/resource-image-impl.h
        dali/internal/event/object/custom-object-internal.cpp
        dali/internal/event/object/custom-object-internal.h
        dali/internal/event/render-tasks/render-task-defaults.h
        dali/internal/event/render-tasks/render-task-impl.cpp
        dali/internal/event/render-tasks/render-task-impl.h
        dali/internal/event/render-tasks/render-task-list-impl.cpp
        dali/internal/event/render-tasks/render-task-list-impl.h
        dali/internal/event/rendering/frame-buffer-impl.cpp
        dali/internal/event/rendering/frame-buffer-impl.h
        dali/internal/event/rendering/geometry-impl.cpp
        dali/internal/event/rendering/geometry-impl.h
        dali/internal/event/rendering/renderer-impl.cpp
        dali/internal/event/rendering/renderer-impl.h
        dali/internal/event/rendering/sampler-impl.cpp
        dali/internal/event/rendering/sampler-impl.h
        dali/internal/event/rendering/shader-impl.cpp
        dali/internal/event/rendering/shader-impl.h
        dali/internal/event/rendering/texture-impl.cpp
        dali/internal/event/rendering/texture-impl.h
        dali/internal/event/rendering/texture-set-impl.cpp
        dali/internal/event/rendering/texture-set-impl.h
        dali/internal/event/size-negotiation/memory-pool-relayout-container.cpp
        dali/internal/event/size-negotiation/memory-pool-relayout-container.h
        dali/internal/event/size-negotiation/relayout-controller-impl.cpp
        dali/internal/event/size-negotiation/relayout-controller-impl.h
        dali/internal/render/common/performance-monitor.h
        dali/internal/render/common/render-algorithms.cpp
        dali/internal/render/common/render-algorithms.h
        dali/internal/render/common/render-debug.cpp
        dali/internal/render/common/render-debug.h
        dali/internal/render/common/render-instruction-container.cpp
        dali/internal/render/common/render-instruction-container.h
        dali/internal/render/common/render-instruction.cpp
        dali/internal/render/common/render-instruction.h
        dali/internal/render/common/render-item.cpp
        dali/internal/render/common/render-item.h
        dali/internal/render/common/render-list.h
        dali/internal/render/common/render-manager.cpp
        dali/internal/render/common/render-manager.h
        dali/internal/render/common/render-tracker-debug.h
        dali/internal/render/common/render-tracker.cpp
        dali/internal/render/common/render-tracker.h
        dali/internal/render/data-providers/node-data-provider.h
        dali/internal/render/data-providers/property-buffer-data-provider.h
        dali/internal/render/data-providers/render-data-provider.cpp
        dali/internal/render/data-providers/render-data-provider.h
        dali/internal/render/data-providers/uniform-map-data-provider.h
        dali/internal/render/gl-resources/context.cpp
        dali/internal/render/gl-resources/context.h
        dali/internal/render/gl-resources/frame-buffer-state-cache.cpp
        dali/internal/render/gl-resources/frame-buffer-state-cache.h
        dali/internal/render/gl-resources/gl-call-debug.cpp
        dali/internal/render/gl-resources/gl-call-debug.h
        dali/internal/render/gl-resources/gl-resource-owner.h
        dali/internal/render/gl-resources/gpu-buffer.cpp
        dali/internal/render/gl-resources/gpu-buffer.h
        dali/internal/render/gl-resources/texture-units.h
        dali/internal/render/queue/render-queue.cpp
        dali/internal/render/queue/render-queue.h
        dali/internal/render/renderers/render-frame-buffer.cpp
        dali/internal/render/renderers/render-frame-buffer.h
        dali/internal/render/renderers/render-geometry.cpp
        dali/internal/render/renderers/render-geometry.h
        dali/internal/render/renderers/render-property-buffer.cpp
        dali/internal/render/renderers/render-property-buffer.h
        dali/internal/render/renderers/render-renderer.cpp
        dali/internal/render/renderers/render-renderer.h
        dali/internal/render/renderers/render-sampler.h
        dali/internal/render/renderers/render-texture.cpp
        dali/internal/render/renderers/render-texture.h
        dali/internal/render/shaders/program-cache.h
        dali/internal/render/shaders/program-controller.cpp
        dali/internal/render/shaders/program-controller.h
        dali/internal/render/shaders/program.cpp
        dali/internal/render/shaders/program.h
        dali/internal/render/shaders/scene-graph-shader.cpp
        dali/internal/render/shaders/scene-graph-shader.h
        dali/internal/update/animation/property-accessor.h
        dali/internal/update/animation/property-component-accessor.h
        dali/internal/update/animation/scene-graph-animation.cpp
        dali/internal/update/animation/scene-graph-animation.h
        dali/internal/update/animation/scene-graph-animator.h
        dali/internal/update/animation/scene-graph-constraint-base.cpp
        dali/internal/update/animation/scene-graph-constraint-base.h
        dali/internal/update/animation/scene-graph-constraint-declarations.h
        dali/internal/update/animation/scene-graph-constraint.h
        dali/internal/update/common/animatable-property.h
        dali/internal/update/common/discard-queue.cpp
        dali/internal/update/common/discard-queue.h
        dali/internal/update/common/double-buffered.h
        dali/internal/update/common/inherited-property.h
        dali/internal/update/common/property-base.cpp
        dali/internal/update/common/property-base.h
        dali/internal/update/common/property-condition-functions.cpp
        dali/internal/update/common/property-condition-functions.h
        dali/internal/update/common/property-condition-step-functions.cpp
        dali/internal/update/common/property-condition-step-functions.h
        dali/internal/update/common/property-condition-variable-step-functions.cpp
        dali/internal/update/common/property-condition-variable-step-functions.h
        dali/internal/update/common/property-owner-messages.cpp
        dali/internal/update/common/property-owner-messages.h
        dali/internal/update/common/property-owner.cpp
        dali/internal/update/common/property-owner.h
        dali/internal/update/common/property-vector3.h
        dali/internal/update/common/scene-graph-buffers.cpp
        dali/internal/update/common/scene-graph-buffers.h
        dali/internal/update/common/scene-graph-connection-change-propagator.cpp
        dali/internal/update/common/scene-graph-connection-change-propagator.h
        dali/internal/update/common/scene-graph-property-notification.cpp
        dali/internal/update/common/scene-graph-property-notification.h
        dali/internal/update/common/uniform-map.cpp
        dali/internal/update/common/uniform-map.h
        dali/internal/update/controllers/render-message-dispatcher.cpp
        dali/internal/update/controllers/render-message-dispatcher.h
        dali/internal/update/controllers/scene-controller-impl.cpp
        dali/internal/update/controllers/scene-controller-impl.h
        dali/internal/update/controllers/scene-controller.h
        dali/internal/update/gestures/gesture-properties.h
        dali/internal/update/gestures/pan-gesture-profiling.cpp
        dali/internal/update/gestures/pan-gesture-profiling.h
        dali/internal/update/gestures/scene-graph-pan-gesture.cpp
        dali/internal/update/gestures/scene-graph-pan-gesture.h
        dali/internal/update/manager/free-list.h
        dali/internal/update/manager/object-owner-container.h
        dali/internal/update/manager/render-instruction-processor.cpp
        dali/internal/update/manager/render-instruction-processor.h
        dali/internal/update/manager/render-task-processor.cpp
        dali/internal/update/manager/render-task-processor.h
        dali/internal/update/manager/sorted-layers.h
        dali/internal/update/manager/transform-manager-property.h
        dali/internal/update/manager/transform-manager.cpp
        dali/internal/update/manager/transform-manager.h
        dali/internal/update/manager/update-algorithms.cpp
        dali/internal/update/manager/update-algorithms.h
        dali/internal/update/manager/update-manager-debug.cpp
        dali/internal/update/manager/update-manager-debug.h
        dali/internal/update/manager/update-manager.cpp
        dali/internal/update/manager/update-manager.h
        dali/internal/update/nodes/node-declarations.h
        dali/internal/update/nodes/node-messages.cpp
        dali/internal/update/nodes/node-messages.h
        dali/internal/update/nodes/node.cpp
        dali/internal/update/nodes/node.h
        dali/internal/update/nodes/scene-graph-layer.cpp
        dali/internal/update/nodes/scene-graph-layer.h
        dali/internal/update/queue/update-message-queue.cpp
        dali/internal/update/queue/update-message-queue.h
        dali/internal/update/render-tasks/scene-graph-camera.cpp
        dali/internal/update/render-tasks/scene-graph-camera.h
        dali/internal/update/render-tasks/scene-graph-render-task-debug.h
        dali/internal/update/render-tasks/scene-graph-render-task-list.cpp
        dali/internal/update/render-tasks/scene-graph-render-task-list.h
        dali/internal/update/render-tasks/scene-graph-render-task.cpp
        dali/internal/update/render-tasks/scene-graph-render-task.h
        dali/internal/update/rendering/scene-graph-renderer.cpp
        dali/internal/update/rendering/scene-graph-renderer.h
        dali/internal/update/rendering/scene-graph-texture-set.cpp
        dali/internal/update/rendering/scene-graph-texture-set.h
        dali/public-api/actors/actor-enumerations.h
        dali/public-api/actors/actor.cpp
        dali/public-api/actors/actor.h
        dali/public-api/actors/camera-actor.cpp
        dali/public-api/actors/camera-actor.h
        dali/public-api/actors/custom-actor-impl.cpp
        dali/public-api/actors/custom-actor-impl.h
        dali/public-api/actors/custom-actor.cpp
        dali/public-api/actors/custom-actor.h
        dali/public-api/actors/draw-mode.h
        dali/public-api/actors/layer.cpp
        dali/public-api/actors/layer.h
        dali/public-api/actors/sampling.h
        dali/public-api/animation/alpha-function.cpp
        dali/public-api/animation/alpha-function.h
        dali/public-api/animation/animation.cpp
        dali/public-api/animation/animation.h
        dali/public-api/animation/constraint-source.cpp
        dali/public-api/animation/constraint-source.h
        dali/public-api/animation/constraint.cpp
        dali/public-api/animation/constraint.h
        dali/public-api/animation/constraints.h
        dali/public-api/animation/key-frames.cpp
        dali/public-api/animation/key-frames.h
        dali/public-api/animation/linear-constrainer.cpp
        dali/public-api/animation/linear-constrainer.h
        dali/public-api/animation/path.cpp
        dali/public-api/animation/path.h
        dali/public-api/animation/time-period.cpp
        dali/public-api/animation/time-period.h
        dali/public-api/common/compile-time-assert.h
        dali/public-api/common/constants.cpp
        dali/public-api/common/constants.h
        dali/public-api/common/dali-common.cpp
        dali/public-api/common/dali-common.h
        dali/public-api/common/dali-vector.cpp
        dali/public-api/common/dali-vector.h
        dali/public-api/common/intrusive-ptr.h
        dali/public-api/common/loading-state.h
        dali/public-api/common/stage.cpp
        dali/public-api/common/stage.h
        dali/public-api/common/type-traits.h
        dali/public-api/common/vector-wrapper.h
        dali/public-api/common/view-mode.h
        dali/public-api/events/gesture-detector.cpp
        dali/public-api/events/gesture-detector.h
        dali/public-api/events/gesture.cpp
        dali/public-api/events/gesture.h
        dali/public-api/events/hover-event.cpp
        dali/public-api/events/hover-event.h
        dali/public-api/events/key-event.cpp
        dali/public-api/events/key-event.h
        dali/public-api/events/long-press-gesture-detector.cpp
        dali/public-api/events/long-press-gesture-detector.h
        dali/public-api/events/long-press-gesture.cpp
        dali/public-api/events/long-press-gesture.h
        dali/public-api/events/pan-gesture-detector.cpp
        dali/public-api/events/pan-gesture-detector.h
        dali/public-api/events/pan-gesture.cpp
        dali/public-api/events/pan-gesture.h
        dali/public-api/events/pinch-gesture-detector.cpp
        dali/public-api/events/pinch-gesture-detector.h
        dali/public-api/events/pinch-gesture.cpp
        dali/public-api/events/pinch-gesture.h
        dali/public-api/events/point-state.h
        dali/public-api/events/tap-gesture-detector.cpp
        dali/public-api/events/tap-gesture-detector.h
        dali/public-api/events/tap-gesture.cpp
        dali/public-api/events/tap-gesture.h
        dali/public-api/events/touch-data.cpp
        dali/public-api/events/touch-data.h
        dali/public-api/events/touch-event.cpp
        dali/public-api/events/touch-event.h
        dali/public-api/events/touch-point.cpp
        dali/public-api/events/touch-point.h
        dali/public-api/events/wheel-event.cpp
        dali/public-api/events/wheel-event.h
        dali/public-api/images/buffer-image.cpp
        dali/public-api/images/buffer-image.h
        dali/public-api/images/encoded-buffer-image.cpp
        dali/public-api/images/encoded-buffer-image.h
        dali/public-api/images/frame-buffer-image.cpp
        dali/public-api/images/frame-buffer-image.h
        dali/public-api/images/image-operations.h
        dali/public-api/images/image.cpp
        dali/public-api/images/image.h
        dali/public-api/images/native-image-interface.h
        dali/public-api/images/native-image.cpp
        dali/public-api/images/native-image.h
        dali/public-api/images/pixel-data.cpp
        dali/public-api/images/pixel-data.h
        dali/public-api/images/pixel.cpp
        dali/public-api/images/pixel.h
        dali/public-api/images/resource-image.cpp
        dali/public-api/images/resource-image.h
        dali/public-api/math/angle-axis.h
        dali/public-api/math/compile-time-math.cpp
        dali/public-api/math/compile-time-math.h
        dali/public-api/math/degree.cpp
        dali/public-api/math/degree.h
        dali/public-api/math/math-utils.h
        dali/public-api/math/matrix.cpp
        dali/public-api/math/matrix.h
        dali/public-api/math/matrix3.cpp
        dali/public-api/math/matrix3.h
        dali/public-api/math/quaternion.cpp
        dali/public-api/math/quaternion.h
        dali/public-api/math/radian.h
        dali/public-api/math/random.h
        dali/public-api/math/rect.h
        dali/public-api/math/uint-16-pair.h
        dali/public-api/math/vector2.cpp
        dali/public-api/math/vector2.h
        dali/public-api/math/vector3.cpp
        dali/public-api/math/vector3.h
        dali/public-api/math/vector4.cpp
        dali/public-api/math/vector4.h
        dali/public-api/math/viewport.h
        dali/public-api/object/any.cpp
        dali/public-api/object/any.h
        dali/public-api/object/base-handle.cpp
        dali/public-api/object/base-handle.h
        dali/public-api/object/base-object.cpp
        dali/public-api/object/base-object.h
        dali/public-api/object/handle.cpp
        dali/public-api/object/handle.h
        dali/public-api/object/object-registry.cpp
        dali/public-api/object/object-registry.h
        dali/public-api/object/property-array.cpp
        dali/public-api/object/property-array.h
        dali/public-api/object/property-conditions.cpp
        dali/public-api/object/property-conditions.h
        dali/public-api/object/property-index-ranges.h
        dali/public-api/object/property-input.cpp
        dali/public-api/object/property-input.h
        dali/public-api/object/property-key.cpp
        dali/public-api/object/property-key.h
        dali/public-api/object/property-map.cpp
        dali/public-api/object/property-map.h
        dali/public-api/object/property-notification-declarations.h
        dali/public-api/object/property-notification.cpp
        dali/public-api/object/property-notification.h
        dali/public-api/object/property-types.cpp
        dali/public-api/object/property-types.h
        dali/public-api/object/property-value.cpp
        dali/public-api/object/property-value.h
        dali/public-api/object/property.cpp
        dali/public-api/object/property.h
        dali/public-api/object/ref-object.cpp
        dali/public-api/object/ref-object.h
        dali/public-api/object/type-info.cpp
        dali/public-api/object/type-info.h
        dali/public-api/object/type-registry-helper.h
        dali/public-api/object/type-registry.cpp
        dali/public-api/object/type-registry.h
        dali/public-api/render-tasks/render-task-list.cpp
        dali/public-api/render-tasks/render-task-list.h
        dali/public-api/render-tasks/render-task.cpp
        dali/public-api/render-tasks/render-task.h
        dali/public-api/rendering/frame-buffer.cpp
        dali/public-api/rendering/frame-buffer.h
        dali/public-api/rendering/geometry.cpp
        dali/public-api/rendering/geometry.h
        dali/public-api/rendering/property-buffer.cpp
        dali/public-api/rendering/property-buffer.h
        dali/public-api/rendering/renderer.cpp
        dali/public-api/rendering/renderer.h
        dali/public-api/rendering/sampler.cpp
        dali/public-api/rendering/sampler.h
        dali/public-api/rendering/shader.cpp
        dali/public-api/rendering/shader.h
        dali/public-api/rendering/texture-set.cpp
        dali/public-api/rendering/texture-set.h
        dali/public-api/rendering/texture.cpp
        dali/public-api/rendering/texture.h
        dali/public-api/signals/base-signal.cpp
        dali/public-api/signals/base-signal.h
        dali/public-api/signals/callback.cpp
        dali/public-api/signals/callback.h
        dali/public-api/signals/connection-tracker-interface.cpp
        dali/public-api/signals/connection-tracker-interface.h
        dali/public-api/signals/connection-tracker.cpp
        dali/public-api/signals/connection-tracker.h
        dali/public-api/signals/dali-signal.h
        dali/public-api/signals/functor-delegate.cpp
        dali/public-api/signals/functor-delegate.h
        dali/public-api/signals/signal-slot-connections.cpp
        dali/public-api/signals/signal-slot-connections.h
        dali/public-api/signals/signal-slot-observers.cpp
        dali/public-api/signals/signal-slot-observers.h
        dali/public-api/signals/slot-delegate.h
        dali/public-api/size-negotiation/relayout-container.h
        dali/public-api/dali-core-version.cpp
        dali/public-api/dali-core-version.h
        dali/public-api/dali-core.h )

SET( EXE_SOURCES
        dali/graphics/vulkan-api-test.cpp)

SET( PG_SOURCES
        playground/vulkan-playground.cpp)

SET( LIB_SOURCES2
        dali/graphics-api/graphics-api-generic-buffer.h
        dali/graphics-api/graphics-api-static-buffer.h
        dali/graphics-api/graphics-api-render-list.h
        dali/graphics-api/graphics-api-texture-details.h
        dali/graphics-api/graphics-api-utility.h
        dali/graphics-api/graphics-api-controller.h
        dali/graphics-api/graphics-api-render-item-list.h
        dali/graphics-api/graphics-api-texture.h
        dali/graphics-api/graphics-api-sampler.h
        dali/graphics-api/graphics-api-base-object-owner.h
        dali/graphics-api/graphics-api-texture-factory.h
        dali/graphics-api/graphics-api-shader-factory.h
        dali/graphics-api/graphics-api-texture-set.h
        dali/graphics-api/graphics-api-framebuffer-factory.h
        dali/graphics-api/graphics-api-accessor.h
        dali/graphics-api/graphics-api-dynamic-buffer.h
        dali/graphics-api/graphics-api-shader-details.h
        dali/graphics-api/graphics-api-framebuffer.h
        dali/graphics-api/graphics-api-shader.h
        dali/graphics-api/graphics-api-base-factory.h
        dali/graphics/graphics-object-owner.h
        dali/graphics/graphics-swapchain.cpp
        dali/graphics/graphics-surface.h
        dali/graphics/graphics-controller.cpp
        dali/graphics/graphics-surface.cpp
        dali/graphics/vulkan-api-test.cpp
        dali/graphics/integration/graphics-logical-device-base.h
        dali/graphics/integration/graphics-surface-base.h
        dali/graphics/integration/graphics-physical-device-base.h
        dali/graphics/integration/graphics-swapchain-base.h
        dali/graphics/vulkan/command-queue.h
        dali/graphics/vulkan/image.cpp
        dali/graphics/vulkan/buffer.h
        dali/graphics/vulkan/image.h
        dali/graphics/vulkan/device-memory.cpp
        dali/graphics/vulkan/command-queue.cpp
        dali/graphics/vulkan/surface.cpp
        dali/graphics/vulkan/swapchain.h
        dali/graphics/vulkan/logical-device.cpp
        dali/graphics/vulkan/command-buffer.cpp
        dali/graphics/vulkan/physical-device.h
        dali/graphics/vulkan/image-view.cpp
        dali/graphics/vulkan/surface/xcb-surface.cpp
        dali/graphics/vulkan/surface/xcb-surface.h
        dali/graphics/vulkan/surface/xlib-surface.h
        dali/graphics/vulkan/surface/xlib-surface.cpp
        dali/graphics/vulkan/surface/vulkan-surface-base.h
        dali/graphics/vulkan/command-pool.cpp
        dali/graphics/vulkan/command-buffer.h
        dali/graphics/vulkan/framebuffer.cpp
        dali/graphics/vulkan/surface.h
        dali/graphics/vulkan/physical-device.cpp
        dali/graphics/vulkan/swapchain.cpp
        dali/graphics/vulkan/buffer.cpp
        dali/graphics/vulkan/device-memory.h
        dali/graphics/vulkan/image-view.h
        dali/graphics/vulkan/framebuffer.h
        dali/graphics/vulkan/common.h
        dali/graphics/vulkan/command-pool.h
        dali/graphics/vulkan/logical-device.h
        dali/graphics/graphics-logical-device.h
        dali/graphics/graphics-logical-device.cpp
        dali/graphics/graphics-texture.h
        dali/graphics/graphics-physical-device.cpp
        dali/graphics/graphics-controller.h
        dali/graphics/graphics-physical-device.h
        dali/graphics/graphics-swapchain.h



        )

FILE(GLOB_RECURSE DALI_SOURCE ./dali/*.cpp ./dali/*.h)


SET( CMAKE_CXX_FLAGS "-g3 -std=c++11 -ggdb -O0 -DVK_USE_PLATFORM_XLIB_KHR -DVK_USE_PLATFORM_XCB_KHR -DVULKAN_HPP_NO_EXCEPTIONS" )

include_directories( . /opt/vulkan/current/x86_64/include )
link_directories( /opt/vulkan/current/x86_64/lib )
add_library( dali-graphics2 ${LIB_SOURCES2} dali/graphics/graphics-logical-device.cpp dali/graphics/graphics-logical-device.h)
target_link_libraries( dali-graphics2 vulkan )

add_executable( dali-vulkan-test ${EXE_SOURCES} )
add_executable( vulkan-playground ${PG_SOURCES} )
target_link_libraries( dali-vulkan-test dali-graphics2 X11 xcb )
target_link_libraries( vulkan-playground X11 vulkan xcb )

set_target_properties(dali-graphics2 PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(dali-vulkan-test PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(vulkan-playground PROPERTIES LINKER_LANGUAGE CXX)

add_custom_target( dali-core /bin/bash build.sh rebuild dali-core WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/../ SOURCES ${DALI_SOURCE} )
add_library( NOBUILD-dali-core ${DALI_SOURCE})
message("dir" ${PROJECT_SOURCE_DIR})
include_directories( ${PROJECT_SOURCE_DIR})